4.00 Fri Apr  4 14:50:16 CEST 2008
     - adapt to new labanquepostale.fr architecture

3.00 Mon Jun 25 09:20:50 CEST 2007
     - adapt to new www.videoposte.com architecture (liste_comptes.jsp)

2.00 Mon Aug 14 19:21:08 CEST 2006
     - adapt to www.videoposte.com architecture
     - drop default_account() since you must _list_accounts to obtain anything
       (fortunately it was not documented and hopefully unused)
     - be warning free when running with -w (thanks to Jean-Marie Renouard for reporting this)

1.03 Tue Sep 20 12:41:59 CEST 2005
     - handle delayed-debit credit card pseudo account
     - allow choosing the number of operations in default_account()
     - allow choosing the account type in default_account()
       (allowing to choose the delayed-debit pseudo account)

1.02 Thu Jan 20 11:13:05 CET 2005
     - fix _get_cookie() which generated many redirects before giving up, causing some failure
     - fix _list_accounts()
     - fix ->as_string on a Statement

1.01 Sat Jan  1 20:42:37 CET 2005
     - minor fix for setting the year of the statements at the beginning of a new year
       with no statements for this new year 

1.00 Fri Jun 25 11:40:18 CEST 2004
     - adapt to www.videoposte.com layout

0.02 Thu Jan  8 12:03:33 CET 2004
     - internal change (the Finance::Bank::LaPoste::Statement hash now contains the "year")

0.01 Wed Oct  8 11:00:07 CEST 2003
     - initial release