@@ -1,3 +1,5 @@
+     - adapt to new labanquepostale.fr architecture (rt.cpan.org#40635)
+
 4.00 Fri Apr  4 14:50:16 CEST 2008
      - adapt to new labanquepostale.fr architecture
 
